--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
   cache:
     type: caffeine
     caffeine:
-      spec: maximumSize=1000,expireAfterWrite=30m
+      spec: maximumSize=1000,expireAfterWrite=1d
 logging:
   level:
     org.springframework.web: DEBUG
